--- a/src/Muzich/HomeBundle/Resources/views/Home/index.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/Home/index.html.twig
@@ -42,10 +42,11 @@
   {% if more_count is defined %} 
   {% if elements|length %}
      <span class="elements_more">
-       <a href="{{ path('home_more', {'count': more_count}) }}" >
+       <a href="{{ path('search_elements') }}" class="elements_more">
          {{ 'more'|trans({}, 'userui') }}
        </a>
      </span>
+     <img class="elements_more_loader" style="display: none;" src="{{ asset('/bundles/muzichcore/img/ajax-loader.gif') }}" alt="loading" />
   {% endif %}
   {% endif %}
   
