--- a/src/Muzich/HomeBundle/Resources/views/Show/showUser.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/Show/showUser.html.twig
@@ -28,10 +28,14 @@
   {% if more_count is defined %} 
   {% if elements|length %}
    <span class="elements_more">
-     <a href="{{ path('show_user_more', {'count': more_count, 'slug': viewed_user.slug}) }}" >
+     <a href="{{ path('search_elements_show_more_empty', {
+       'type'     : 'user', 
+       'object_id': viewed_user.id
+     }) }}" class="elements_more" >
        {{ 'more'|trans({}, 'userui') }}
      </a>
    </span>
+   <img class="elements_more_loader" style="display: none;" src="{{ asset('/bundles/muzichcore/img/ajax-loader.gif') }}" alt="loading" />
   {% endif %}
   {% endif %}
   
