--- a/src/Muzich/CoreBundle/Resources/views/SearchElement/default.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/SearchElement/default.html.twig
@@ -100,6 +100,8 @@
 
 {% else %}
 
+  <ul class="elements"></ul>
+
   <div class="no_elements">
     {% if noelements_filter is defined %}
       <p class="no-elements">
