--- a/src/Muzich/HomeBundle/Resources/views/Show/showUser.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/Show/showUser.html.twig
@@ -25,6 +25,10 @@
   
   {% include "MuzichCoreBundle:SearchElement:default.html.twig" %}
     
+  <div class="elements_loader_div">
+    <img class="elements_more_loader" style="display: none;" src="{{ asset('/bundles/muzichcore/img/ajax-loader.gif') }}" alt="loading" />
+  </div>
+  
   {% if more_count is defined %} 
   {% if elements|length %}
    <span class="elements_more">
@@ -35,7 +39,6 @@
        {{ 'more'|trans({}, 'userui') }}
      </a>
    </span>
-   <img class="elements_more_loader" style="display: none;" src="{{ asset('/bundles/muzichcore/img/ajax-loader.gif') }}" alt="loading" />
   {% endif %}
   {% endif %}
   
