Evolution #89: Modifier / Supprimer ses éléments En cours: Mise en place de la procédure ajax (jsute chargement). Reste a adapter le code js de promptajax pour être chargé dans l'ajax.

--- a/src/Muzich/CoreBundle/Resources/views/SearchElement/default.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/SearchElement/default.html.twig
@@ -57,6 +57,14 @@
           <img src="{{ asset('bundles/muzichcore/img/1324917097_link.png') }}" alt="link" />
         </a>
           
+        {% if app.user.id == element.owner.id %}
+          <a title="{{ 'element.edit.link'|trans({}, 'elements') }}" class="element_edit_link" 
+             href="{{ path('element_edit', {'element_id' : element.id})  }}" style="display: none;"
+          >
+            <img src="{{ asset('bundles/muzichcore/img/1327151338_desktop.png') }}" alt="edit" />
+          </a>
+        {% endif %}
+            
         {% if element.embed %}
           {% autoescape false %}
             <div id="embed_{{ element.id }}" class="element_embed" style="display: none;">
