Evolution #89: odifier / Supprimer ses éléments Modification

--- a/src/Muzich/CoreBundle/Resources/views/Element/element.edit.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Element/element.edit.html.twig
@@ -5,5 +5,5 @@
     'form_name'     : form_name
   } %}
 
-  <input type="submit" />
+  <input type="submit" value="{{ 'element_edit.submit.value'|trans({}, 'userui') }}" />
 </form>
