--- a/src/Muzich/CoreBundle/Resources/views/Tag/tagFavoritesForm.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Tag/tagFavoritesForm.html.twig
@@ -7,7 +7,7 @@
     'search_tags' : favorite_tags_id
   } %}
   
-  {{ form_row(form.tags) }}
+  {{ form_widget(form.tags, { 'attr': {'class': 'tagBox_tags_ids'} }) }}
 
   {{ form_row(form._token) }}
 
