--- a/src/Muzich/CoreBundle/Resources/views/SearchElement/element.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/SearchElement/element.html.twig
@@ -39,6 +39,12 @@
   >
     <img src="{{ asset('bundles/muzichcore/img/1327151338_desktop.png') }}" alt="edit" />
   </a>
+
+  <a title="{{ 'element.remove.link'|trans({}, 'elements') }}" class="element_remove_link" 
+     href="{{ path('element_remove', {'element_id' : element.id})  }}" style="display: none;"
+  >
+    <img src="{{ asset('bundles/muzichcore/img/1327168960_fileclose.png') }}" alt="delete" />
+  </a>
 {% endif %}
 
 <div class="loader">
