--- a/src/Muzich/CoreBundle/Resources/views/Element/element.edit.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Element/element.edit.html.twig
@@ -1,9 +1,19 @@
-<form name="{{ form_name }}" action="{{ path('element_update', {'element_id': element_id}) }}" method="post" {{ form_enctype(form) }}>
+{% extends "MuzichHomeBundle::layout.html.twig" %}
 
-  {% include "MuzichCoreBundle:Element:form.edit.html.twig" with { 
-    'form'          : form, 
-    'form_name'     : form_name
-  } %}
+{% block title %}{{ 'title.element.edit'|trans({}, 'userui') }}{% endblock %}
 
-  <input type="submit" value="{{ 'element_edit.submit.value'|trans({}, 'userui') }}" />
-</form>
+{% block content %}
+
+  <span class="sinfo">{{ 'system.infos.normally_js'|trans({}, 'userui') }}</span>
+
+  <form name="{{ form_name }}" action="{{ path('element_update', {'element_id': element_id}) }}" method="post" {{ form_enctype(form) }}>
+
+    {% include "MuzichCoreBundle:Element:form.edit.html.twig" with { 
+      'form'          : form, 
+      'form_name'     : form_name
+    } %}
+
+    <input type="submit" value="{{ 'element_edit.submit.value'|trans({}, 'userui') }}" />
+  </form>
+  
+{% endblock %}
