--- a/src/Muzich/GroupBundle/Resources/views/Form/form.html.twig
+++ b/src/Muzich/GroupBundle/Resources/views/Form/form.html.twig
@@ -26,6 +26,6 @@
   'form_name'     : form_name
 } %}
 
-{{ fform_widget(form.tags, { 'attr': {'class': 'tagBox_tags_ids'} }) }}
+{{ form_widget(form.tags, { 'attr': {'class': 'tagBox_tags_ids'} }) }}
 
 {{ form_rest(form) }}
