Evolution #88: Annoncé tout les sites supportés

--- a/src/Muzich/CoreBundle/Resources/views/Info/container.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Info/container.html.twig
@@ -8,6 +8,12 @@
   
   <a href="{{ path('info_development') }}" >
     {{ 'bottom_menu.development'|trans({}, 'navigationui') }}
+  </a>-
+  
+  <a href="{{ path('info_sites') }}" >
+    {{ 'bottom_menu.sites'|trans({}, 'navigationui') }}
   </a>
+  
+  
   
 </div>
