Classe button sur les input et liens

--- a/src/Muzich/CoreBundle/Resources/views/Element/element.edit.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Element/element.edit.html.twig
@@ -13,7 +13,7 @@
       'form_name'     : form_name
     } %}
 
-    <input type="submit" value="{{ 'element_edit.submit.value'|trans({}, 'userui') }}" />
+    <input type="submit" value="{{ 'element_edit.submit.value'|trans({}, 'userui') }}" class="button" />
   </form>
   
 {% endblock %}
