--- a/src/Muzich/CoreBundle/Resources/views/Tag/tagsPrompt.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Tag/tagsPrompt.html.twig
@@ -4,9 +4,9 @@
     
   {% if display_specials_buttons is defined %}
     {% if display_specials_buttons == true %}
-      <input class="clear" type="button" value="{{ 'filter.clear'|trans({}, 'userui') }}" />
+      <input class="clear button" type="button" value="{{ 'filter.clear'|trans({}, 'userui') }}" />
       <input type="hidden" class="filter_clear_url" value="{{ path('filter_clear') }}" />
-      <input class="mytags" type="button" value="{{ 'filter.mytags'|trans({}, 'userui') }}" />
+      <input class="mytags button" type="button" value="{{ 'filter.mytags'|trans({}, 'userui') }}" />
       <input type="hidden" class="filter_mytags_url" value="{{ path('filter_mytags') }}" />
     {% endif %}
   {% endif %}
