--- a/src/Muzich/GroupBundle/Resources/views/Default/edit.html.twig
+++ b/src/Muzich/GroupBundle/Resources/views/Default/edit.html.twig
@@ -10,7 +10,7 @@
     
     {% include "MuzichGroupBundle:Form:form.html.twig" %}
 
-    <input type="submit" />
+    <input type="submit" class="button" />
   </form>
 
 {% endblock %}
