--- a/src/Muzich/UserBundle/Resources/views/User/account.html.twig
+++ b/src/Muzich/UserBundle/Resources/views/User/account.html.twig
@@ -32,7 +32,7 @@
       'form': form_password
     } %}
 
-    <input type="submit" />
+    <input type="submit" class="button" />
   </form>
   
   <h3>{{ 'my_account.change_email'|trans({}, 'userui') }}</h3>
@@ -43,7 +43,7 @@
       'form': change_email_form
     } %}
 
-    <input type="submit" />
+    <input type="submit" class="button" />
   </form>
     
 {% endblock %}
