--- a/src/Muzich/CoreBundle/Resources/views/Element/ajax.element.edit.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Element/ajax.element.edit.html.twig
@@ -6,6 +6,6 @@
     'form_name'     : form_name
   } %}
 
-  <input type="button" value="{{ 'element_edit.cancel.value'|trans({}, 'userui') }}" class="cancel_edit" />
-  <input type="submit" value="{{ 'element_edit.submit.value'|trans({}, 'userui') }}" />
+  <input type="button" value="{{ 'element_edit.cancel.value'|trans({}, 'userui') }}" class="cancel_edit button" />
+  <input type="submit" value="{{ 'element_edit.submit.value'|trans({}, 'userui') }}" class="button" />
 </form>
