--- a/src/Muzich/HomeBundle/Resources/views/Show/showGroup.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/Show/showGroup.html.twig
@@ -37,7 +37,7 @@
 
         {% include "MuzichCoreBundle:Element:form.add.html.twig" with { 'form': add_form, 'form_name': add_form_name } %}
 
-        <input type="submit" />
+        <input type="submit" class="button" >
       </form>
       
     </div>
