--- a/web/bundles/muzichcore/css/main.css
+++ b/web/bundles/muzichcore/css/main.css
@@ -62,8 +62,7 @@ input.button, button.button {
 }
 
 .button:active {
-  padding: 3px 6px;
-  border: 1px solid #165c6d;
+  background-color: #39c9cc;
 }
 
 #container a
