Afficher ajouter un element: cache le formulaire de filtre

--- a/src/Muzich/CoreBundle/Resources/views/SearchElement/element.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/SearchElement/element.html.twig
@@ -11,7 +11,7 @@
               src="{{ asset('bundles/muzichcore/img/nothumb.png') }}" 
             {% endif %}
             title="{{ 'element.show.open_embed'|trans({}, 'elements') }}" 
-            alt="open"
+            alt=""
           />
         </a>
       {% else %}
@@ -24,7 +24,7 @@
               src="{{ asset('bundles/muzichcore/img/nothumb.png') }}" 
             {% endif %}
             title="{{ 'element.show.open_embed'|trans({}, 'elements') }}" 
-            alt="open"
+            alt=""
           />
         </a>
       {% endif %}
