--- a/web/bundles/muzichcore/css/main.css
+++ b/web/bundles/muzichcore/css/main.css
@@ -353,26 +353,36 @@ padding: 0 0 1px 3px;
 ul.tagbox li {
 margin:0;
 }
+
 ul.tagbox li.tag {
+  
 float: left;
 line-height: 1;
-padding: 3px 6px;
 list-style-type: none;
 margin-top: 3px;
 margin-right: 3px;
-}
-ul.tagbox li.tag {
--moz-border-radius: 2px;
--webkit-border-radius: 2px;
-border-radius: 2px;
-display:block;
+
 font-size:13px;
 border: 1px solid #cad8f3;
 background: #dee7f8;
-padding: 2px;
 margin-bottom: 1px;
-padding-right: 15px;
 position: relative;
+
+  display: inline-block;
+  
+  padding-left: 7px;
+  padding-top: 4px;
+  padding-right: 14px;
+  padding-bottom: 4px;
+  
+	text-decoration: none;
+	font-weight: bold;
+	color: #fff;
+	background-color: #39c;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-khtml-border-radius: 5px;
+	border-radius: 5px;
 }
 ul.tagbox li.input {display:block; float:left;}
 ul.tagbox input:focus {
@@ -396,6 +406,8 @@ cursor:pointer;
 width: 7px; height: 7px;
 font-size: 1px;
 background: url('/bundles/muzichcore/img/tag_close.gif');
+background-position: 0px 100%;
+margin-top: 2px;
 }
 ul.tagbox a.close:hover {
 background-position: 7px;
