Mise en place d'un bg pour le thumbail

--- a/web/bundles/muzichcore/css/main.css
+++ b/web/bundles/muzichcore/css/main.css
@@ -456,6 +456,7 @@ li.element span.element_name
 
 li.element td.element_thumbnail
 {
+  background-image: url(/bundles/muzichcore/img/nothumb.png);
   width: 120px;
   height: 90px;
 }
