--- a/src/Muzich/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/layout.html.twig
@@ -23,6 +23,11 @@
   <script src="{{ asset('js/formdefault/jquery.formdefaults.js') }}" type="text/javascript"></script>
   <script src="{{ asset('js/jquery.form-2.14.js') }}" type="text/javascript"></script>
   <script src="{{ asset('js/jConfirmAction/jconfirmaction.jquery.js') }}" type="text/javascript"></script>
+  <script type="text/javascript">
+    string_follow_stop = "{{ 'user.stop_follow'|trans({}, 'users') }}";
+    string_follow_following = "{{ 'user.following'|trans({}, 'users') }}";
+    string_follow_follow = "{{ 'user.follow'|trans({}, 'users') }}";
+  </script>
   {% block js %}{% endblock %}
   
 </head>
