--- a/web/bundles/muzichhome/css/home.css
+++ b/web/bundles/muzichhome/css/home.css
@@ -1,8 +1,44 @@
 
+/*
+1328276321_add_small.png
+      1328276855_list-remove.png
+      1328276953_clean.png */
+
+div.show_options
+{
+  float: right;
+}
 
 #container .follow_link
 {
-  float: right;
+  text-decoration: none;
+  width: 110px;
+  text-align: center;
+}
+
+#container a.following
+{
+  background: -moz-linear-gradient(top, #08ec00 0%, #10d400 39%, #0a9800 100%);
+  background: -webkit-linear-gradient(top, #08ec00 0%, #10d400 39%, #0a9800 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #08ec00), color-stop(0.39, #10d400), color-stop(1, #0a9800));
+  background: -o-linear-gradient(top, #08ec00 0%, #10d400 39%, #0a9800 100%);
+  background: -ms-linear-gradient(top, #08ec00 0%, #10d400 39%, #0a9800 100%);
+  background: linear-gradient(top, #08ec00 0%, #10d400 39%, #0a9800 100%);
+  
+  border: 1px solid #0a9800;
+  color: white;
+}
+
+#container a.following:hover
+{  
+  background: -moz-linear-gradient(top, #ff1e00 0%, #e50600 35%, #bf0a00 100%);
+  background: -webkit-linear-gradient(top, #ff1e00 0%, #e50600 35%, #bf0a00 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #ff1e00), color-stop(0.35, #e50600), color-stop(1, #bf0a00));
+  background: -o-linear-gradient(top, #ff1e00 0%, #e50600 35%, #bf0a00 100%);
+  background: -ms-linear-gradient(top, #ff1e00 0%, #e50600 35%, #bf0a00 100%);
+  background: linear-gradient(top, #ff1e00 0%, #e50600 35%, #bf0a00 100%);
+
+  border: 1px solid #bf0a00;
   text-decoration: none;
 }
 
