--- a/src/Muzich/HomeBundle/Resources/views/Home/index.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/Home/index.html.twig
@@ -46,7 +46,7 @@
   {% if more_count is defined %} 
   {% if elements|length %}
      <span class="elements_more">
-       <a href="{{ path('search_elements') }}" class="elements_more">
+       <a href="{{ path('search_elements') }}" class="elements_more button">
          {{ 'more'|trans({}, 'userui') }}
        </a>
      </span>
