--- a/src/Muzich/FavoriteBundle/Resources/views/Favorite/myList.html.twig
+++ b/src/Muzich/FavoriteBundle/Resources/views/Favorite/myList.html.twig
@@ -12,6 +12,33 @@
 
   <h2>{{ 'favorites.your_favorites'|trans({}, 'network') }}</h2>
 
+  {% if tags|length %}
+    <input type="hidden" id="get_elements_url" value="{{ path('favorite_get', {'user_id': app.user.id, 'tags_ids_json' : ''}) }}" />
+    <ul id="favorite_tags">
+      {% for tag in tags %}
+        <li>
+          <a href="#{{ tag.id }}" class="button tag">
+            {{ tag.name }}
+          </a>
+        </li>
+      {% endfor %}
+    </ul>
+    <div class="clearboth" ></div>
+  {% endif %}
+
   {% include "MuzichCoreBundle:SearchElement:default.html.twig" %}
+    
+  <div class="elements_loader_div">
+    <img class="elements_more_loader" style="display: none;" src="{{ asset('/bundles/muzichcore/img/ajax-loader.gif') }}" alt="loading" />
+  </div>
+  
+  {% if elements|length %}
+     <span class="elements_more">
+       <input type="hidden" id="more_elements_url" value="{{ path('favorite_get', {'user_id': app.user.id, 'tags_ids_json' : ''}) }}" />
+       <a href="{{ path('favorite_get', {'user_id': app.user.id, 'tags_ids_json' : tags_id_json}) }}" class="elements_more button">
+         {{ 'more'|trans({}, 'userui') }}
+       </a>
+     </span>
+  {% endif %}
     
 {% endblock %}
