--- a/src/Muzich/FavoriteBundle/Resources/views/layout.html.twig
+++ b/src/Muzich/FavoriteBundle/Resources/views/layout.html.twig
@@ -3,6 +3,9 @@
 {% block css %}
 	<link href="{{ asset('bundles/muzichfavorite/css/favorite.css') }}" rel="stylesheet" media="screen" type="text/css" />
 {% endblock %}
+{% block js %}
+	<script src="{{ asset('bundles/muzichfavorite/js/favorite.js') }}" type="text/javascript"></script>
+{% endblock %}
 
 {% block main_content %}
   
