--- a/web/bundles/muzichcore/css/main.css
+++ b/web/bundles/muzichcore/css/main.css
@@ -45,6 +45,11 @@
   
 }
 
+div.clearboth
+{
+  clear: both;
+}
+
 .button {
 	display: inline-block;
 	line-height: 1;
@@ -65,6 +70,11 @@ input.button, button.button {
 
 .button:active {
   background-color: #39c9cc;
+}
+
+.button.active
+{
+  background-color: #39C9CC;
 }
 
 #container a
